--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
     float: left;
     width:16%;
     color:lime;
+    height: 50px;
 }
 
 .container2{
@@ -14,6 +15,7 @@
     float: left;
     width:16%;
     color:blueviolet;
+    height: 50px;
 }
 
 .container3{
@@ -21,6 +23,7 @@
     float: left;
     width:16%;
     color:purple;
+    height: 50px;
 }
 
 .container4{
@@ -28,31 +31,54 @@
     float: left;
     width:50%;
     color:gray;
+    height: 50px;
 }
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
 
 /*ex2*/
 
-.menu{
-    padding:25px
+body {
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
 }
+
+.menu{
+    margin-top: 0px;
+    border: 1px solid rgb(200, 226, 235);
+    height: 80px;
+    background-color: rgba(242, 248, 250, 0.979);
+}
+
+ul {
+    list-style-type: none;
+    font-size: 25px;
+    align-content: baseline;
+  }
 
 .Home{
     font-weight: bold;
     float: left;
-    padding:25px
+    padding-right: 25px;
+    padding-left: 25px;
 }
 
 .QuemSomos{
     float: left;
-    padding:25px
+    padding-right: 25px;
+    padding-left: 25px;
 }
 
 .Clientes{
     float: left;
-    padding:25px
+    padding-right: 25px;
+    padding-left: 25px;
 }
 
 .Contactos{
     float: left;
-    padding:25px
+    padding-right: 25px;
+    padding-left: 25px;
 }
