--- a/css/style6.css
+++ b/css/style6.css
@@ -5,15 +5,17 @@
     position:relative;
     margin-top:100px ;
     margin-left: 700px;
+    z-index: 1;
 }
 
 .secondtrectangle{
     width: 100px;
     height: 150px;
     background-color: blueviolet;
-    position:absolute;
+    position:relative;
     top:75px;
     left:50px;
+    z-index: 1;
 }
 
 .thirdrectangle{
@@ -22,23 +24,29 @@
     background-color:greenyellow;
     margin-left: 700px;
     position:relative;
+    top:-150px;
+    z-index: 10;
 }
 
 .fourthrectangle{
     width: 100px;
     height: 150px;
     background-color: blueviolet;
-    position:absolute;
+    position:relative;
     top:75px;
     left:50px;
+    z-index: 10;
 }
 
 .circle{
-    width: 100px;
-    height: 100px;
-    border-radius:50px;
+    width: 150px;
+    height: 150px;
+    border-radius:100px;
     background-color:blue;
-    margin-left: 750px;
+    margin-left: 725px;
+    position:relative;
+    top:-200px;
+    z-index: 20;
 }
 
 
